Implement parallel index building